# hop

./: .bhop  .gitignore  CHANGELOG.org  Cargo.toml  LICENSE  Makefile  README.md  build  build.rs  planning.md  test.toml
.cargo/: config  config.toml
.github/workflows/: coverage.yml
runners/: add_runners.py  add_runners.rs  add_runners.sh  add_runners_unix.sh  add_runners_windows_gitbash.sh  gitbash_runner.sh  runner.nu  runner.ps1  runner.sh
runners/scripts/: runner.elv  runner.fish  runner.nu  runner.ps1  runner.sh  runner.zsh
src/: add_runners.rs  args.rs  config.rs  configs.rs  groups.rs  hopper.rs  lib.rs  main.rs  metadata.rs
src/defaults/: help.txt  unix_defaults.toml  windows_defaults.toml
src/runners/: runner.nu  runner.ps1  runner.sh
tests/: test_args.rs  test_configs.rs  test_groups.rs  test_hopper.rs  test_metadata.rs
