[package]
name = "bhop"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Small CLI tool to help you hop around the shell."
homepage = "https://github.com/gnoat/hop"
repository = "https://github.com/gnoat/hop"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
rand = "0.8.5"
serde = "1.0.152"
serde_derive = "1.0.152"
symlink = "0.1.0"
tempfile = "3.3.0"
toml = "0.5.10"
