[package]
name = "bhop"
version = "0.2.0"
edition = "2021"
authors = ["Shane Stephenson <stephenson.shane.a@gmail.com>"]
readme = "README.md"
description = "Small CLI tool to help you hop around the shell."
homepage = "https://github.com/gnoat/hop"
repository = "https://github.com/gnoat/hop"
license = "MIT"
keywords = ["cli", "cd", "hop", "navigate", "shortcut"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
serde = "1.0.152"
serde_derive = "1.0.152"
tempfile = "3.3.0"
toml = "0.5.10"
press-btn-continue = "0.1.1"
chrono = "0.4.23"
anyhow = "1.0"
sqlite = "0.30.4"
colored = "2.0.0"
serial_test = "1.0.0"
