[package]
name = "bhop"
version = "0.5.1"
edition = "2021"
authors = ["Shane Stephenson <stephenson.shane.a@gmail.com>"]
readme = "README.md"
description = "Small CLI tool to help you hop around the shell."
homepage = "https://github.com/UnsafeOats/hop"
repository = "https://github.com/UnsafeOats/hop"
license = "MIT"
keywords = ["cli", "cd", "hop", "navigate", "shortcut"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
serde = "1.0.152"
serde_derive = "1.0.152"
tempfile = "3.3.0"
toml = "0.5.10"
chrono = "0.4.23"
anyhow = "1.0"
sqlite = "0.30.4"
colored = "2.0.0"
serial_test = "1.0.0"
tempdir = "0.3.7"
proceed = "0.1.0"

[build-dependencies]
dos2unix = "0.1.0"
dirs = "4.0.0"
anyhow = "1.0"

[[bin]]
name = "bhop"
path = "src/main.rs"
